--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>javafx-graphics</artifactId>
             <version>21-ea+24</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
 
     </dependencies>
 
